Fix AWS install script broker.py invocations to reflect changes in y/n options

--- a/shelf/docs/TODO.txt
+++ b/shelf/docs/TODO.txt
@@ -1,13 +1,14 @@
-TODO list
+TODO list for PreservationSimulation SHELF project
 
 
 TODO: extractvalues.py
 DONE - add optional arg for --separator=','
 DONE - default should still be space
-DONE - if i use comma, then datacleanup can use DictReader.  not a big deal.
+DONE - if i use comma, then datacleanup can use DictReader.  
+    not a big deal.
 DONE - actually, Dialect.delimiter can be set to whatever i want.
 DONE - maybe just use reader with delimiter=' ' and dict(zip()) 
-   the header list and data list together.  
+    the header list and data list together.  
 DONE - recode entirely to force filter first thing, to reduce the size
     of the internal lists required, and speed things up.  
     dramatic improvement.  
@@ -37,7 +38,7 @@ DONE - increase the stuck timer a lot.
   that was left over in a previous GiantOutput file into
   the done dir.  
 DONE - fix y/n switch options to get rid of the need for a value.
-- fix the broker invocation in the AWSinstallscript to match the
+DONE - fix the broker invocation in the AWSinstallscript to match the
   revised y/n options.
 
 
@@ -49,11 +50,15 @@ DONE - write filter for instructions as they are being generated flat
 DONE - write rules for the filter
   rules in a list of json dictionaries
   first rule is permit *, then list of denies maybe slightly countermanded
-- rewrite rules to filter lots more, particularly nonsense cases
+DONE - rewrite rules to filter lots more, particularly nonsense cases
   with glitch freq, impact, decay, and life.  
-DONE - integrate into last stage of flat instruction generation
+DONE - integrate filter into last stage of flat instruction 
+  generation
 - write documentation on how to generate instructions flat file 
   and database.  
+DONE - fix order of args to filter program, data file last.
+DONE - fix shell script that makes complete instruction list to
+  reflect change in argument order.
 
 
 TODO: newnewinstructions, flatlib or new db
@@ -80,7 +85,6 @@ TODO: Docker scheduling
 - after container install, run broker tests
 
 
-
 TODO: AWS deployment
 DONE - deploy shelf on AWS free tier system.
 DONE - automate deployment to AWS systems.
@@ -92,7 +96,7 @@ DONE - deploy to 32 core system c3.8xlarge.
 - run on 32 core system: how fast?
 DONE - clean up and document the AWS-Ubuntu install script
 - test docker deployment on 8 core system
-- test docker deployment on 36 core system
+- test docker deployment on 32 core system
 
 
 TODO: nonmonotonicity testing
@@ -124,10 +128,10 @@ DONE - change main.py sector lifetime to half-life.
   (this will change ALL the existing numbers; recompute everything)
 DONE - update the AWS install script single-run test for the new half-life 
   results.
-DONE - change glitch frequency to half-life (oops, already is)ce2
+DONE - change glitch frequency to half-life (oops, already is)
 DONE - update the main.py CLI help to reflect half-life instead of lifetime.
 - update the main.py CLI to accept both --lifek and --lifem.  
-- update the broker.py CLI help to reflect half-life instead of lifetime.
+DONE - update the broker.py CLI help to reflect half-life instead of lifetime.
 - update other docs to reflect half-life instead of lifetime.  
 
 
