--- a/shelf/docs/TODO.txt
+++ b/shelf/docs/TODO.txt
@@ -12,7 +12,7 @@ DONE - maybe just use reader with delimiter=' ' and dict(zip())
 DONE - recode entirely to force filter first thing, to reduce the size
     of the internal lists required, and speed things up.  
     dramatic improvement.  
-- Is there some place here where memoizing can help further?
+DEFER - Is there some place here where memoizing can help further?
 
 
 TODO: 100% glitch impact
@@ -25,7 +25,7 @@ DONE - client go shopping for another server to replace dead one.
 WRONG - if duration is short, then server may recover before the
   client even notices; however, all documents still have been lost,
   so the next audit will find many dead docs.  
-- BUG, NEEDS FIXING: when client provisions a new server, it must 
+DONE - BUG, NEEDS FIXING: when client provisions a new server, it must 
   check that at least one copy of a document still exists before
   putting a copy on the new server.  if a document is already lost
   on all servers, we can't invent a new copy for the new server.  
@@ -35,13 +35,14 @@ WRONG - if duration is short, then server may recover before the
   should the client mark the re-provisioning as majority or minority 
   repairs?
 
+
 TODO: brokercommands
 DONE - slow down after extractvalues, too.
 
 
 TODO: broker.py
 DONE - increase the stuck timer a lot.
-- protect against grep failure, linux vs windows.
+DUNNO - protect against grep failure, linux vs windows.
 - add a cleanstart shell script to empty the dirs that need to 
   be empty, set a clean GiantOutput file, and rescue any data
   that was left over in a previous GiantOutput file into
@@ -49,6 +50,8 @@ DONE - increase the stuck timer a lot.
 DONE - fix y/n switch options to get rid of the need for a value.
 DONE - fix the broker invocation in the AWSinstallscript to match the
   revised y/n options.
+- start the run count from 1 even for cases that have already been done, 
+  so that the run number reflects progress toward the total number.  
 
 
 TODO: newinstructions
@@ -77,7 +80,7 @@ TODO: newnewinstructions, flatlib or new db
 - eventually, web app to generate smallish sets of instructions
 
 
-TODO: packaging
+TODO: packaging into Docker
 DONE - do Docker basic tutorials
 DONE - construct vm platforms for docker learning on both systems
 DONE - transcribe crummy bash script to dockerfile.
@@ -102,10 +105,13 @@ DONE - get access to 8 core system.
 DONE - deploy to 8 core system.
 DONE - run shelf on 8 core system.
 DONE - deploy to 32 core system c3.8xlarge.
-- run on 32 core system: how fast?
-DONE - clean up and document the AWS-Ubuntu install script
-- test docker deployment on 8 core system
-- test docker deployment on 32 core system
+DONE - run on 32 core system: how fast?
+DONE - clean up and document the AWS-Ubuntu install script.
+DONE - test docker deployment on 8 core system.
+DONE - test docker deployment on 32 core system.
+DONE - change newinstructions db to something smaller and more useful.
+- change newinstructions section of script to create flat instructions 
+  and database from the ins files pulled.  
 
 
 TODO: nonmonotonicity testing
@@ -124,12 +130,14 @@ DONE - who is going to talk?
 DONE - propose what pictures we need
 DONE - get list of specific graphs to be done
 
+
 TODO: runs for September presentation
 DONE - what graphics needed?
 DONE - what numbers to compute?
 
+
 TODO: same for November presentation to iPRES at UNC
-DONE - write slides for Micah to use, update from September's
+DONE - write slides for Micah to use, update from September's.
 
 
 TODO: rationalize time constants so that people can understand them
@@ -139,16 +147,20 @@ DONE - update the AWS install script single-run test for the new half-life
   results.
 DONE - change glitch frequency to half-life (oops, already is)
 DONE - update the main.py CLI help to reflect half-life instead of lifetime.
-- update the main.py CLI to accept both --lifek and --lifem.  
+DONE - update the main.py CLI to accept both --lifek and --lifem.  
 DONE - update the broker.py CLI help to reflect half-life instead of lifetime.
 - update other docs to reflect half-life instead of lifetime.  
-- updata main.py to accept either lifek or lifem but not both.
-- BUG: fix main.py arg parsing to make all the positional params mandatory.  
+WRONG - update main.py to accept either lifek or lifem but not both.
+DONE - update main.py to accept both lifek and lifem, where lifek takes
+  precedence because it is more accurate.  
+DONE - BUG: fix main.py arg parsing to make all the positional params mandatory.  
   and bump the CLI version number.  
+DONE - remove the requirement for a Y/N value from --shortlog.
 - BUG: fix main.py default values in G so that is doesn't fail if there are
   no param files in the familydir or specificdir; always fails for the list
   items, such as ncopies, I think because the list items in the dictionaries
   should be one level deeper.  
+
 
 TODO: lifetimes: correlated institutional failures
 - at some interval, economic glitch dramatically increases the 
@@ -167,34 +179,33 @@ TODO: web interface to select instructions for broker run
 - build backend for interface that generates broker.py command.
 
 
-newinstructions
-- write filter for instructions as they are being generated flat
-  hierarchical: a field named action for permit/deny
-- write rules for the filter
-  rules in a list of json dictionaries
-  first rule is permit *, then list of denies maybe slightly countermanded
-- integrate into last stage of flat instruction generation
+TODO: newinstructions
+DONE - write filter for instructions as they are being generated flat; 
+  hierarchical: a field named action for permit/deny.
+DONE - write rules for the filter;
+  rules in a list of json dictionaries;
+  first rule is permit *, then list of denies maybe slightly countermanded.
+DONE - integrate into last stage of flat instruction generation.
 
-newnewinstructions
+
+TODO: newnewinstructions
 - custom flat db or maybe tiny or buzhug
 - facade or adapter: same interface as current mongolib
 - new load, list, and clear utilities that use flatlib
 - eventually, web app to generate smallish sets of instructions
 
-packaging
+
+TODO: packaging
 DONE - do Docker basic tutorials
 DONE - construct vm platforms for docker learning on both systems
 - transcribe crummy bash script to dockerfile
 
-nonmonotonicity testing
+
+DEFER nonmonotonicity testing
 - do runs in the sensitive areas, limited to 3-4 lifetimes and few copies
 - runs with 100 or more seeds?
 - many runs with 20ish seeds to assess variability?
 - jacknife the existing numbers?
-
-runs for September presentation
-- what graphics needed?
-- what numbers to compute?
 
 
 
