--- a/shelf/docs/TODO.txt
+++ b/shelf/docs/TODO.txt
@@ -55,11 +55,24 @@ DONE - fix y/n switch options to get rid of the need for a value.
 DONE - fix the broker invocation in the AWSinstallscript to match the
   revised y/n options.
 FIXME - start the run count from 1 even for cases that have already been done, 
-  so that the run number reflects progress toward the total number.  
+  so that the run number reflects progress toward the total number, and print 
+  the run number in the already-done line.  
+FIXME - log all broker commands into some file.
+FIXME - add auditfreq and segs to the intro run-n lines.  
+FIXME - make familydir and specificdir required options (fun oxymoron).
+
+
+TODO: broker docs
+FIXME - add examples of obscure mongodb syntax in the --query command (and others?) 
+  to howto broker doc.
+FIXME - Add a help file about using mongoshell to examine database of instructions, in case you think anything is funny about the database.  
+MAYBE - add a script to dump out some sample stats from a mongo db, such as names of
+  all dbs, number of elements and varnames for each, like that.  
 
 
 TODO: audit
-FIXME - log stats at end of each audit cycle: lost, minority repairs, majority repairs.  These are all cross-server figures; don't know if we need per-server figures.
+FIXME - log stats at end of each audit cycle: lost, minority repairs, majority repairs.  These are all cross-server figures.  We need to add per-server figures, too.
+FIXME - log per-server total losses and hits at end of run.  
 
 
 TODO: newinstructions
